# SUM2018

./: .gitignore  README.md
CAMP/SOLVE4/: MAIN.CPP  SOLVE4.CPP  SOLVE4.H
CAMP/T03LIST/: T03LIST.CPP
CAMP/T04COMPL/: Main.cpp
CAMP/T05ANIM/: .clang-format  CMakeLists.txt  MAIN.CPP  a.object
CAMP/T05ANIM/ANIM/: ANIM.CPP  ANIM.H
CAMP/T05ANIM/ANIM/INPUT/: INPUT.CPP  INPUT.H
CAMP/T05ANIM/ANIM/PRIM/: PRIM.CPP  PRIM.H  PRIMS.CPP  PRIMS.H
CAMP/T05ANIM/ANIM/RND/: RENDER.CPP  RENDER.H
CAMP/T05ANIM/ANIM/RND/RES/: IMAGE.H  MATERIALS.H  RESOURCES.H  SHADER.CPP  SHADERS.H  TEXTURES.H
CAMP/T05ANIM/ANIM/TIMER/: TIMER.CPP  TIMER.H
CAMP/T05ANIM/ANIM/UNIT/: U_CONTROL.CPP  U_CONTROL.H  U_FLY.CPP  U_FLY.H
CAMP/T05ANIM/MTH/: MATR.H  VEC.H
CAMP/T05ANIM/Math/: MTHDEF.H  mthdef.hpp  vec.hpp
CAMP/T05ANIM/Models/: Unit_Cow.CPP  Unit_Cow.H
CAMP/T05ANIM/STOCK/: STOCK.H
CAMP/T05ANIM/WND/: WIN.H
CAMP/T05ANIM/Window/: WIN.CPP  WINMSG.CPP
CAMP/T05ANIM/cmake/: CPM.cmake  list_dirs.cmake  upd_tar_list.cmake
CAMP/T05ANIM/include/: def.hpp
CAMP/T05ANIM/include/math/: CAMERA.H  MTH.H  mthdef.hpp  vec.hpp
CAMP/T05ANIM/test/: CMakeLists.txt
CAMP/T05ANIM/test/unit/: CMakeLists.txt
CAMP/T05ANIM/test/unit/example/: CMakeLists.txt  example.cpp
CAMP/T05ANIM/test/unit/math/: CMakeLists.txt  vec.cpp
CAMP/T05ANIM/tools/: CMakeLists.txt
CAMP/T05ANIM/tools/anim/: CMakeLists.txt  main.cpp
CAMP/T08RT/: DEF.H  T08RT.vcxproj
CAMP/T08RT_OLD/: DEF.H  MAIN.CPP
CAMP/TEST/: main.cpp
T00FST/: T00FST.c  T00FST.sln  T00FST.vcproj
T01EYES/: T01EYES.C  T01EYES.sln  T01EYES.vcproj
T02EYES/: T02EYES.C  T02EYES.sln  T02EYES.vcproj
T03CLOCK/: FACEAND.xcf  T03CLOCK.C  T03CLOCK.rc  T03CLOCK.sln  T03CLOCK.vcproj  and.tga  resource.h  xor.tga
T04PERM/: T04PERM.c  T04PERM.sln  T04PERM.vcproj
T05DET/: IN1.TXT  PERM.txt  T05DET.c  T05DET.sln  T05DET.vcproj
T06DETG/: IN1.TXT  PERM.txt  T06DETG.cpp  T06DETG.sln  T06DETG.vcproj
T07SPHERE/: T07SPHERE.c  T07SPHERE.sln  T07SPHERE.vcproj
T08ANIM/: DEF.H  MAIN.c  RND.H  T08ANIM.sln  T08ANIM.vcproj  VEC.H  cow.object
T08ANIM/MTH/: VEC.H
T08RT/: MAIN.CPP  T08RT.sln  T08RT.vcxproj.filters
T08RT/MTH/: SOLVE4.CPP  SOLVE4.H  VEC.H
(+89 files in other folders)
